# databricks_helpers

./: .flake8  .gitignore  .pre-commit-config.yaml  CODEOWNERS  README.md  pyproject.toml
demos/Cloud_migration_demo/: README.md
demos/Cloud_migration_demo/00.Cloud_migration_demo_source_data_workspace/: 00_create_mount.py  01_create_tables.py  02_write_dinners_table.py  03_map_hive_metastore_tables.py
demos/Cloud_migration_demo/01.Cloud_migration_source_UC_workspace/: 04_map_hive_metastore_tables_to_UC.py  05_add_tables_to_delta_share.py  (+1 more)
demos/DLT_Dynamic_Definitions_Demo/: 01_Data_Generator.py  02_DLT_Dynamic_Bronze_Table.py  03_DLT_Dynamic_Silver_Tables.py  README.md
demos/dbt_demo/: Data_generation.py
demos/dbt_demo/dbt_project/: docker-compose.yaml  pyproject.toml
demos/dbt_demo/dbt_project/credit_cards_dbt_demo/: dbt_project.yml
demos/dbt_demo/dbt_project/credit_cards_dbt_demo/models/: consolidated_media.sql  credit_card_transactions.sql  customers.sql  email_results.sql  marketing_attribution.sql  marketing_results.sql  schema.yml  web_sessions.sql
demos/dbt_demo/dbt_project/credit_cards_dbt_demo/models/staging/: schema.yml  vw_bing_ads.sql  vw_facebook_ads.sql  vw_google_ads.sql  vw_mailchimp.sql  vw_web_sessions.sql
demos/dbt_demo/dbt_project/dags/: data_generation_dag.py  dbt_dag.py
demos/dbt_demo_native/: Data_generation.py
demos/serverless_notebooks_environments/: Faker_notebook.ipynb  Faker_notebook_usando_env_exportado.py  New_faker_notebook.ipynb  environment_serverless.yaml
enhancers/webhook_handler/: .gitignore  handler.go
notebooks/: AutoML_API-Individualized_series-example.py  BigQuery_example.py  Databricks_Python_SDK_Creating_Multi_Task_Job.py  Enable system tables.py  Fetching_data_from _s3_to_ADLS.py  Generate_PAT_token_for_service_principal_on_Azure_Databricks.py  Generate_fake_data.html  Generate_fake_data.ipynb  Get_Billable_Usage.py  Get_PowerBI_IPs.py  Jobs_control.py  Lakehouse_monitoring_daily_cost_per_table.py  Lakeview_cop.py  Pausing_continous_job.py  Pyspark_requests_example.py  Reading_a_Delta_Share.py
notebooks/databricks_python_sdk/: Databricks_Python_SDK_Creating_Multi_Task_Job.py  Task_1.py  Task_2.py  Task_3.py
terraform_examples/azure-databricks-adf/: .terraform.lock.hcl  adf.tf  azure_databricks.tf  main.tf  providers.tf  readme.md  variables.tf  versions.tf
(+54 files in other folders)
